[gd_scene load_steps=59 format=2]

[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv1Clicked.png" type="Texture" id=2]
[ext_resource path="res://Sprites/LumberMillInterface/Fon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/GateLv1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv3Text.png" type="Texture" id=6]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv4Text.png" type="Texture" id=7]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv2Text.png" type="Texture" id=9]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/Papirus.png" type="Texture" id=10]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv1Clicked.png" type="Texture" id=11]
[ext_resource path="res://Scripts/LumberMillScene.gd" type="Script" id=12]
[ext_resource path="res://Sprites/LumberMillInterface/UpgradeOk.png" type="Texture" id=13]
[ext_resource path="res://Sprites/LumberMillInterface/UpgradeOkClicked.png" type="Texture" id=14]
[ext_resource path="res://Sprites/LumberMillInterface/150Text.png" type="Texture" id=15]
[ext_resource path="res://Sprites/LumberMillInterface/200Text.png" type="Texture" id=16]
[ext_resource path="res://Sprites/LumberMillInterface/100Text.png" type="Texture" id=17]
[ext_resource path="res://SFX/Negative_Sound.wav" type="AudioStream" id=18]
[ext_resource path="res://Sprites/LumberMillInterface/BackButton.png" type="Texture" id=19]
[ext_resource path="res://Sprites/LumberMillInterface/BackButtonClicked.png" type="Texture" id=20]
[ext_resource path="res://SFX/castle_upgrade.wav" type="AudioStream" id=21]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv1Clicked.png" type="Texture" id=22]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/DuvarLv2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv1.png" type="Texture" id=24]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv3Clicked.png" type="Texture" id=25]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv2.png" type="Texture" id=26]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv2Clicked.png" type="Texture" id=27]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/GateLv3.png" type="Texture" id=28]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv2.png" type="Texture" id=29]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv2Clicked.png" type="Texture" id=30]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv3Clicked.png" type="Texture" id=31]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv2Clicked.png" type="Texture" id=32]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv3Clicked.png" type="Texture" id=35]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/GateLv2.png" type="Texture" id=36]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/DuvarLv3.png" type="Texture" id=37]
[ext_resource path="res://SFX/barracks_upg.ogg" type="AudioStream" id=38]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/WoodenTowerLv3.png" type="Texture" id=39]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv1.png" type="Texture" id=40]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv2.png" type="Texture" id=41]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv3Clicked.png" type="Texture" id=42]
[ext_resource path="res://SFX/lumber_upgrade.ogg" type="AudioStream" id=43]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv2Clicked.png" type="Texture" id=44]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv1Clicked.png" type="Texture" id=45]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/StoneTowerLv3.png" type="Texture" id=46]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillinfo.png" type="Texture" id=47]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarrackInfo.png" type="Texture" id=48]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerInfo.png" type="Texture" id=49]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv1Text.png" type="Texture" id=50]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv2Text.png" type="Texture" id=51]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv5Text.png" type="Texture" id=52]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv6Text.png" type="Texture" id=53]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv3Text.png" type="Texture" id=54]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/TowerLv1Text.png" type="Texture" id=55]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/BarracksLv3Text.png" type="Texture" id=56]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv1Text.png" type="Texture" id=57]
[ext_resource path="res://Sprites/LumberMillInterface/LMinterfaceSon/LumberMillLv2Text.png" type="Texture" id=58]

[node name="LumberMillScene" type="Node2D"]
script = ExtResource( 12 )

[node name="Fon" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Papirus" type="Sprite" parent="."]
texture = ExtResource( 10 )

[node name="Walls" type="Node2D" parent="."]
position = Vector2( -1.18747, 0 )

[node name="DuvarLv2" type="Sprite" parent="Walls"]
visible = false
position = Vector2( -3.53735, 27.0078 )
texture = ExtResource( 23 )

[node name="DuvarLv3" type="Sprite" parent="Walls"]
visible = false
position = Vector2( -28.6258, 23.8598 )
texture = ExtResource( 37 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -5 )
zoom = Vector2( 1.3, 1.3 )

[node name="Lumber1" type="TouchScreenButton" parent="."]
position = Vector2( -69.3313, 20.8166 )
normal = ExtResource( 24 )
pressed = ExtResource( 2 )

[node name="LumberMillLv1Text" type="Sprite" parent="Lumber1"]
position = Vector2( 10.1065, 20.1834 )
texture = ExtResource( 57 )

[node name="Lumber2" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -69.3313, 14.8257 )
normal = ExtResource( 33 )
pressed = ExtResource( 27 )

[node name="LumberMillLv2Text" type="Sprite" parent="Lumber2"]
position = Vector2( 10.1065, 26.1743 )
texture = ExtResource( 58 )

[node name="Lumber3" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -75.8632, 13.8229 )
normal = ExtResource( 34 )
pressed = ExtResource( 35 )

[node name="LumberMillLv3Text" type="Sprite" parent="Lumber3"]
position = Vector2( 16.6384, 27.1771 )
texture = ExtResource( 54 )

[node name="Barracks1" type="TouchScreenButton" parent="."]
position = Vector2( -17.2856, 18.0124 )
normal = ExtResource( 1 )
pressed = ExtResource( 22 )

[node name="BarracksLv1Text" type="Sprite" parent="Barracks1"]
position = Vector2( 17.2856, 21.7565 )
texture = ExtResource( 50 )

[node name="Barracks2" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -11.7692, 13.063 )
normal = ExtResource( 29 )
pressed = ExtResource( 30 )

[node name="BarracksLv2Text" type="Sprite" parent="Barracks2"]
position = Vector2( 11.7692, 26.7059 )
texture = ExtResource( 9 )

[node name="Barracks3" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -18.7475, 4.02372 )
normal = ExtResource( 8 )
pressed = ExtResource( 31 )

[node name="BarracksLv3Text" type="Sprite" parent="Barracks3"]
position = Vector2( 18.7475, 35.7452 )
texture = ExtResource( 56 )

[node name="Tower1" type="TouchScreenButton" parent="."]
position = Vector2( 49.6867, 15.8403 )
normal = ExtResource( 4 )
pressed = ExtResource( 11 )

[node name="TowerLv1Text" type="Sprite" parent="Tower1"]
position = Vector2( 11.4293, 25.1597 )
texture = ExtResource( 55 )

[node name="Tower2" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 49.6867, 3.85526 )
normal = ExtResource( 26 )
pressed = ExtResource( 32 )

[node name="TowerLv2Text" type="Sprite" parent="Tower2"]
position = Vector2( 11.4293, 37.1447 )
texture = ExtResource( 51 )

[node name="Tower3" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 49.6867, -13.1663 )
normal = ExtResource( 39 )
pressed = ExtResource( 25 )

[node name="TowerLv3Text" type="Sprite" parent="Tower3"]
position = Vector2( 11.4094, 54.1663 )
texture = ExtResource( 6 )

[node name="Tower4" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 49.6867, 7.93871 )
normal = ExtResource( 40 )
pressed = ExtResource( 45 )

[node name="TowerLv4Text" type="Sprite" parent="Tower4"]
position = Vector2( 11.4703, 33.0613 )
texture = ExtResource( 7 )

[node name="Tower5" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 49.6867, -11.0535 )
normal = ExtResource( 41 )
pressed = ExtResource( 44 )

[node name="TowerLv5Text" type="Sprite" parent="Tower5"]
position = Vector2( 11.4703, 52.0295 )
texture = ExtResource( 52 )

[node name="Tower6" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 49.6867, -23.0513 )
normal = ExtResource( 46 )
pressed = ExtResource( 42 )

[node name="TowerLv6Text" type="Sprite" parent="Tower6"]
position = Vector2( 11.5434, 64.0513 )
texture = ExtResource( 53 )

[node name="Gates" type="Node2D" parent="."]
position = Vector2( 20.1969, -0.163956 )

[node name="GateLv1" type="Sprite" parent="Gates"]
position = Vector2( 55.4655, 27.0247 )
texture = ExtResource( 5 )

[node name="GateLv2" type="Sprite" parent="Gates"]
visible = false
position = Vector2( 52.489, 25 )
texture = ExtResource( 36 )

[node name="GateLv3" type="Sprite" parent="Gates"]
visible = false
position = Vector2( 53.4685, 24.0126 )
texture = ExtResource( 28 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 80, 25 )
scale = Vector2( 0.8, 0.8 )
transform = Transform2D( 0.8, 0, 0, 0.8, 80, 25 )

[node name="LumberPop" type="Popup" parent="CanvasLayer"]
margin_right = 50.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LumberMillinfo" type="Sprite" parent="CanvasLayer/LumberPop"]
texture = ExtResource( 47 )

[node name="150Text" type="Sprite" parent="CanvasLayer/LumberPop"]
position = Vector2( 24.8892, 11.0712 )
texture = ExtResource( 15 )

[node name="LumUp" type="TouchScreenButton" parent="CanvasLayer/LumberPop"]
position = Vector2( 30, 6.2422 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )

[node name="TowerPop" type="Popup" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerInfo" type="Sprite" parent="CanvasLayer/TowerPop"]
texture = ExtResource( 49 )

[node name="TowUp" type="TouchScreenButton" parent="CanvasLayer/TowerPop"]
position = Vector2( 20, 6.2422 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )

[node name="100Text" type="Sprite" parent="CanvasLayer/TowerPop"]
position = Vector2( 14.3261, 10.9025 )
texture = ExtResource( 17 )

[node name="BarracksPop" type="Popup" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ArmyInfo" type="Sprite" parent="CanvasLayer/BarracksPop"]
texture = ExtResource( 48 )

[node name="BarUp" type="TouchScreenButton" parent="CanvasLayer/BarracksPop"]
position = Vector2( 20, 6.2422 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )

[node name="200Text" type="Sprite" parent="CanvasLayer/BarracksPop"]
position = Vector2( 13.881, 11.06 )
texture = ExtResource( 16 )

[node name="negative_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -0.35849, 0 )
stream = ExtResource( 18 )

[node name="BackButton" type="TouchScreenButton" parent="."]
position = Vector2( -86.554, -13.1663 )
normal = ExtResource( 19 )
pressed = ExtResource( 20 )

[node name="castle_upgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
volume_db = -7.505

[node name="barracks_upg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )

[node name="lumber_upg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 43 )
[connection signal="pressed" from="Lumber1" to="." method="_on_Lumber_pressed" flags=3]
[connection signal="pressed" from="Lumber2" to="." method="_on_Lumber2_pressed" flags=3]
[connection signal="pressed" from="Lumber3" to="." method="_on_Lumber3_pressed" flags=3]
[connection signal="pressed" from="Barracks1" to="." method="_on_Barracks_pressed" flags=3]
[connection signal="pressed" from="Barracks2" to="." method="_on_Barracks2_pressed" flags=3]
[connection signal="pressed" from="Barracks3" to="." method="_on_Barracks3_pressed" flags=3]
[connection signal="pressed" from="Tower1" to="." method="_on_Tower_pressed" flags=3]
[connection signal="pressed" from="Tower2" to="." method="_on_Tower2_pressed" flags=3]
[connection signal="pressed" from="Tower3" to="." method="_on_Tower3_pressed" flags=3]
[connection signal="pressed" from="Tower4" to="." method="_on_Tower4_pressed" flags=3]
[connection signal="pressed" from="Tower5" to="." method="_on_Tower5_pressed" flags=3]
[connection signal="pressed" from="Tower6" to="." method="_on_Tower6_pressed" flags=3]
[connection signal="pressed" from="CanvasLayer/LumberPop/LumUp" to="." method="_on_LumUp_pressed" flags=3]
[connection signal="pressed" from="CanvasLayer/TowerPop/TowUp" to="." method="_on_TowUp_pressed" flags=3]
[connection signal="pressed" from="CanvasLayer/BarracksPop/BarUp" to="." method="_on_BarUp_pressed" flags=3]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed" flags=3]
